fixing video on mobile

--- a/postcard-core/styles/postcard.sass
+++ b/postcard-core/styles/postcard.sass
@@ -124,6 +124,7 @@ ul.postcard-feed
     //+single-box-shadow($medium-grey, 0, 0, 2px, 1px)
     margin-top: 10/$em
     margin-left: 64/$em
+    clear: both
     //padding: 5/$em
     @media all and (max-width: 480px)
       margin-left: 0
